# api_server/service/prediction/QCHATPredictor.py
@@ -5,9 +5,10 @@ import joblib
 
 class QCHATPredictor:
     def __init__(self,  logger: logging.Logger):
-        self.model_path = 'models\qchat_LR_model.pkl'  # Specify your model path here
-        self.scaler_path = 'models\qchat_standard_scaler.pkl'
+        self.model_path = 'C:\\Users\\hemas\\Documents\\Applied_AI_and_ML_Courses\\Projects_In_Machine_Learning\\ASDInsight\\models\\qchat_LR_model.pkl'  # Specify your model path here
+        self.scaler_path = 'C:\\Users\\hemas\\Documents\\Applied_AI_and_ML_Courses\\Projects_In_Machine_Learning\\ASDInsight\\models\\qchat_standard_scaler.pkl'
         self.model = joblib.load(self.model_path)
+        self.scaler = joblib.load(self.scaler_path)
         self.logger = logger
     def normalize_data(self, input_data):
         # Assuming the DataFrame contains all the required features
@@ -17,16 +18,16 @@ class QCHATPredictor:
         normalized_features = self.scaler.transform(features)
         return normalized_features
     def predict_qchat(self, input_data):
-        self.logger.info("Inside qchat predict Starting prediction.")
+        self.logger.info("Inside qchat predict method")
         features_array = self.normalize_data(input_data)
         # Make prediction
         prediction = self.model.predict(features_array)
-        self.logger.info("QCHAT prediction",prediction)
+        self.logger.info(f"QCHAT prediction {prediction}")
+        Qchat_score = input_data.get("Sum_QCHAT")
         # Assuming binary classification with 0 and 1
-        #risk = 'High Risk' if prediction[0] == 1 else 'Low Risk'
         # Interpret prediction
         if prediction >= 0.5:
-            result = 'Autistic'
+            result = f'QCHAT Score: {Qchat_score}. There is a high risk the child might suffer from Autism.'
         else:
-            result = 'Not Autistic'
+            result = f'QCHAT Score: {Qchat_score}. The risk is very low. Child is not Autistic!'
         return result
